nav logo - safari header img gap fix ?

--- a/src/App.scss
+++ b/src/App.scss
@@ -74,9 +74,7 @@ nav ul {
 }
 
 nav li{ 
-  padding:auto;
   padding-top: 15vh;
-  padding-bottom: 0;
   list-style: none;
   text-align: center;
   justify-content: center;
